--- a/Konspector/Components/Layout/MainLayout.razor
+++ b/Konspector/Components/Layout/MainLayout.razor
@@ -1,16 +1,20 @@
 ﻿@inherits LayoutComponentBase
+
+<!--Це головний шаблон для всіх сторінок-->
 <div class="page">
+    <!--Це меню зліва-->
     <div class="sidebar">
         <NavMenu />
     </div>
 
     <main>
+         <!--панелька зверху-->
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            Останні
         </div>
-
+        <!--основний контент-->
         <article class="content px-4">
-            @Body
+            @Body<!--замість цієї штуковини буде підставлятися вкладка яку ми вибрали-->
         </article>
     </main>
 </div>
