--- a/Konspector/Components/Layout/MainLayout.razor.css
+++ b/Konspector/Components/Layout/MainLayout.razor.css
@@ -15,11 +15,13 @@ main {
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
+    justify-content: flex-start;
     height: 3.5rem;
     display: flex;
     align-items: center;
 }
+
+
 
     .top-row ::deep a, .top-row ::deep .btn-link {
         white-space: nowrap;
