--- a/Konspector/Components/Layout/NavMenu.razor
+++ b/Konspector/Components/Layout/NavMenu.razor
@@ -10,17 +10,34 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Останні
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="todolist">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> To do list
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="textor">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Textor
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="projector">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Projector
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="neuralika">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Neuralika
+            </NavLink>
+        </div>
+        
+        <!---->
+        <div class="nav-item px-3 bottom">
+            <NavLink class="nav-link" href="neuralika">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Налаштування
             </NavLink>
         </div>
     </nav>
