--- a/Konspector/Components/Layout/NavMenu.razor
+++ b/Konspector/Components/Layout/NavMenu.razor
@@ -29,14 +29,14 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="neuralika">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Neuralika
+            <NavLink class="nav-link" href="neuralka">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Neuralka
             </NavLink>
         </div>
         
         <!---->
         <div class="nav-item px-3 bottom">
-            <NavLink class="nav-link" href="neuralika">
+            <NavLink class="nav-link" href="neuralka">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Налаштування
             </NavLink>
         </div>
