--- a/Konspector/App.xaml
+++ b/Konspector/App.xaml
@@ -14,6 +14,7 @@
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
             </Style>
 
+         <!--use <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> -->
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
