--- a/Konspector/Components/Layout/MainLayout.razor.css
+++ b/Konspector/Components/Layout/MainLayout.razor.css
@@ -6,6 +6,7 @@
 
 main {
     flex: 1;
+    background-color: #7585BD;
 }
 
 .sidebar {
@@ -13,12 +14,13 @@ main {
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-start;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
+   background-color: #7585BD;
+   color: white;
+   border-bottom: 1px solid #2A3559;
+   justify-content: flex-start;
+   height: 3.5rem;
+   display: flex;
+   align-items: center;
 }
 
 
@@ -77,3 +79,5 @@ main {
         padding-right: 1.5rem !important;
     }
 }
+
+
