--- a/Konspector/Components/Pages/ToDoList.razor
+++ b/Konspector/Components/Pages/ToDoList.razor
@@ -1,20 +1,42 @@
 ﻿
 @page "/todolist"
 
-<h1>Counter</h1>
+<div class="todo-content">
+   <div class="todo-main-container">
+      <div class="todo-panel">
+         <button class="todo-label">Todos for today</button>
+         <button class="todo-add-panel">icon here</button>
+         <button class="todo-save">save</button>
+         <button class="todo-edit">edit</button>
+      </div>
+      <div class="todo-body">
+         @for(int i = 0; i < 5; i++)
+         {
+         <div class="todo-item">
+            <input type="checkbox" class="todo-checkbox" />
+            <input type="text" class="todo-text" />
+            <button class="todo-delete" style="display:none">delete icon</button>
+         </div>
+         }
+      </div>
+   </div>
 
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-<input type="number" @bind="currentCount" />
-
-@code {
-
-    private int currentCount = 0;
-
-    private void IncrementCount() {
-        currentCount++;
-
-    }
-
-}
+   <div class="todo-sidebar">
+       @for(int i = 0; i < 5; i++)
+       {
+           <div class="todo-mini">
+               <div class="todo-mini-label">Summer holidays plan</div>
+               <div class="todo-mini-body">
+                  @for (int j = 0; j < 5; j++)
+                  {
+                      <div class="todo-item">
+                           <input type="checkbox" class="todo-checkbox" />
+                           <input type="text" class="todo-text" />
+                           <button class="todo-delete" style="display:none">delete icon</button>
+                     </div>
+                  }
+               </div>
+           </div>
+       }
+   </div>
+</div>
