--- a/Konspector/Components/Pages/Projector.razor
+++ b/Konspector/Components/Pages/Projector.razor
@@ -1,20 +1,58 @@
-﻿
-@page "/projector"
+﻿@page "/projector"
 
-<h1>Counter</h1>
+<div class="projector-content">
+    <div class="projector-main-container">
+        <div class="projector-panel">
+            <button class="projector-label">Projector</button>
+            <button class="projector-save">save</button>
+            <button class="projector-del">icon here</button>
+            <button class="projector-add-panel">icon here</button>
+        </div>
+        <div class="projector-editor">
+            <div class="projector-add-column">
+                <button class="projector-add-column-button">Add Column</button>
+            </div>
+            <div class="main">
+                @for (int j = 0; j < 4; j++)
+                {
+                    <div class="kanban-column">
+                        <div class="kanban-column-header">
+                            <div class="kanban-column-title">Column Title @j</div>
+                            <div class="kanban-column-delete">icon here</div>
+                        </div>
+                        <div class="kanban-column-body">
+                            @for (int i = 0; i < j; i++)
+                            {
+                                <div class="kanban-item">
+                                    <div class="kanban-item-head">
+                                        <span>Title @i (@j)</span>
+                                        <div class="kanban-item-edit">icon here</div>
+                                    </div>
+                                    <div class="kanban-item-delete">icon here</div>
+                                </div>
+                            }
+                        </div>
+                        <div class="kanban-column-footer">
+                            <button class="kanban-add-item">+ Add Item</button>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
 
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-<input type="number" @bind="currentCount" />
-
-@code {
-
-    private int currentCount = 0;
-
-    private void IncrementCount() {
-        currentCount++;
-
-    }
-
-}
+    <div class="projector-sidebar">
+        <div class="projector-sidebar-head">
+            Saved
+        </div>
+        <div class="projector-sidebar-list">
+            @for (int i = 0; i < 5; i++)
+            {
+                <div class="projector-sidebar-item">
+                    <i class="fa fa-file-text"></i>
+                    <div class="projector-sidebar-label">Filename</div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
