--- a/Konspector/Components/Pages/Textor.razor
+++ b/Konspector/Components/Pages/Textor.razor
@@ -1,20 +1,43 @@
 ﻿
 @page "/textor"
 
-<h1>Counter</h1>
+<div class="textor-content">
+   <div class="textor-main-container">
+        <div class="textor-panel">
+            <button class="textor-label">Textor</button>
+            <button class="textor-save">save</button>
+            <button class="textor-del">icon here</button>
+            <button class="textor-add-panel">icon here</button>
+        </div>
+        <div class="textor-editor">
+            <div class="textor-toolbar">
+               <span><b>B</b></span>
+               <span><i>I</i></span>
+               <span><u>U</u></span>
+               <span><s>S</s></span>
+               <span><span>&#x1F4C4;</span></span>
+               <span><span>&#x1F4C5;</span></span>
+               <span><span>&#x1F4C8;</span></span>
+               <span><span>&#x1F4C9;</span></span>
+            </div>
+            <div class="main">
+               <textarea class="textor-textarea"></textarea>
+            </div>
+        </div>
+    </div>
 
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-<input type="number" @bind="currentCount" />
-
-@code {
-
-    private int currentCount = 0;
-
-    private void IncrementCount() {
-        currentCount++;
-
-    }
-
-}
+    <div class="textor-sidebar">
+        <div class="textor-sidebar-head">
+           Saved
+        </div>
+        <div class="textor-sidebar-list">
+           @for(int i = 0; i < 5; i++)
+            {
+            <div class="textor-sidebar-item">
+               <i class="fa fa-file-text"></i>
+               <div class="textor-sidebar-label">Filename</div>
+            </div>
+            }
+        </div>
+    </div>
+</div>
