--- a/Konspector/Components/Pages/Textor.razor
+++ b/Konspector/Components/Pages/Textor.razor
@@ -1,43 +1,114 @@
-﻿
-@page "/textor"
+﻿@page "/textor"
+
+@using Blazored.TextEditor
 
 <div class="textor-content">
-   <div class="textor-main-container">
+    <div class="textor-main-container">
         <div class="textor-panel">
             <button class="textor-label">Textor</button>
             <button class="textor-save">save</button>
             <button class="textor-del">icon here</button>
             <button class="textor-add-panel">icon here</button>
         </div>
+
+
         <div class="textor-editor">
-            <div class="textor-toolbar">
-               <span><b>B</b></span>
-               <span><i>I</i></span>
-               <span><u>U</u></span>
-               <span><s>S</s></span>
-               <span><span>&#x1F4C4;</span></span>
-               <span><span>&#x1F4C5;</span></span>
-               <span><span>&#x1F4C8;</span></span>
-               <span><span>&#x1F4C9;</span></span>
-            </div>
-            <div class="main">
-               <textarea class="textor-textarea"></textarea>
-            </div>
+            <BlazoredTextEditor @ref="@QuillHtml">
+                <ToolbarContent>
+                    <select class="ql-header">
+                        <option selected=""></option>
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
+                    </select>
+                    <span class="ql-formats">
+                        <button class="ql-bold"></button>
+                        <button class="ql-italic"></button>
+                        <button class="ql-underline"></button>
+                        <button class="ql-strike"></button>
+                    </span>
+                    <span class="ql-formats">
+                        <select class="ql-color"></select>
+                        <select class="ql-background"></select>
+                    </span>
+                    <span class="ql-formats">
+                        <button class="ql-list" value="ordered"></button>
+                        <button class="ql-list" value="bullet"></button>
+                    </span>
+                    <span class="ql-formats">
+                        <button class="ql-link"></button>
+                    </span>
+                </ToolbarContent>
+
+                <EditorContent>
+                    <h4>This Toolbar works with HTML</h4>
+                    <a href="http://BlazorHelpWebsite.com">
+                        BlazorHelpWebsite.com
+                    </a>
+                </EditorContent>
+
+
+            </BlazoredTextEditor>
         </div>
     </div>
 
     <div class="textor-sidebar">
         <div class="textor-sidebar-head">
-           Saved
+            Saved
         </div>
         <div class="textor-sidebar-list">
-           @for(int i = 0; i < 5; i++)
+            @for (int i = 0; i < 5; i++)
             {
-            <div class="textor-sidebar-item">
-               <i class="fa fa-file-text"></i>
-               <div class="textor-sidebar-label">Filename</div>
-            </div>
+                <div class="textor-sidebar-item">
+                    <i class="fa fa-file-text"></i>
+                    <div class="textor-sidebar-label">Filename</div>
+                </div>
             }
         </div>
     </div>
 </div>
+
+
+
+
+<br />
+<button class="btn btn-primary"
+        @onclick="GetHTML">
+    Get HTML
+</button>
+<button class="btn btn-primary"
+        @onclick="SetHTML">
+    Set HTML
+</button>
+<br />
+<div>
+    <br />
+    @((MarkupString)QuillHTMLContent)
+    @QuillHTMLContent
+</div>
+<br />
+
+@code {
+
+    public BlazoredTextEditor QuillHtml;
+    string QuillHTMLContent;
+
+    public async void GetHTML()
+    {
+        QuillHTMLContent = await this.QuillHtml.GetHTML();
+        StateHasChanged();
+    }
+
+    public async void SetHTML()
+    {
+        string QuillContent =
+            @"<a href='http://BlazorHelpWebsite.com/'>" +
+            "<img src='images/BlazorHelpWebsite.gif' /></a>";
+
+        await this.QuillHtml.LoadHTMLContent(QuillContent);
+        StateHasChanged();
+    }
+}
+
