drag and drop projector?

--- a/Konspector/Components/Layout/NavMenu.razor
+++ b/Konspector/Components/Layout/NavMenu.razor
@@ -10,34 +10,34 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Останні
+                <span class="bi fa fa-home" aria-hidden="true"></span> Головна
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="todolist">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> To do list
+                <span class="bi fa fa-list-ul" aria-hidden="true"></span> To Do List
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="textor">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Textor
+                <span class="bi fa fa-file-text" aria-hidden="true"></span> Textor
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="projector">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Projector
+                <span class="bi fa fa-project-diagram" aria-hidden="true"></span> Projector
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="neuralka">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Neuralka
+                <span class="bi fa fa-brain" aria-hidden="true"></span> Neuralka
             </NavLink>
         </div>
         
         <!---->
         <div class="nav-item px-3 bottom">
-            <NavLink class="nav-link" href="neuralka">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Налаштування
+            <NavLink class="nav-link" href="settings">
+                <span class="bi fa fa-cog" aria-hidden="true"></span> Налаштування
             </NavLink>
         </div>
     </nav>
