--- a/Konspector/Components/Pages/Textor.razor
+++ b/Konspector/Components/Pages/Textor.razor
@@ -6,9 +6,9 @@
     <div class="textor-main-container">
         <div class="textor-panel">
             <button class="textor-label">Textor</button>
-            <button class="textor-save">save</button>
-            <button class="textor-del">icon here</button>
-            <button class="textor-add-panel">icon here</button>
+            <button class="textor-save"> <i class="fa fa-save"></i> </button>
+            <button class="textor-del"><i class="fa fa-trash"></i></button>
+            <button class="textor-add-panel"> <i class="fa fa-plus"></i> </button>
         </div>
 
 
